--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,9 +20,12 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+
+    - name: Download cc-reporter
+      run: curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+
+    - name: Grant execute permission
+      run: chmod +x gradlew cc-test-reporter
+
     - name: Build with Gradle
-      run: ./gradlew build
-    - name: Generate test report
-      run: ./gradlew jacocoTestReport
+      run: ./gradlew build jacocoTestReport
