--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,13 @@ jobs:
       run: chmod +x gradlew cc-test-reporter
 
     - name: Build with Gradle
-      run: ./gradlew build jacocoTestReport
+      run: ./gradlew build
 
-    - name: Upload test report
-      run: |
-        ./cc-test-reporter format-coverage app/build/reports/jacoco/test/jacocoTestReport.xml -t jacoco
-        ./cc-test-reporter upload-coverage
+    - name: Generate & Upload test report
+      uses: paambaati/codeclimate-action@v2.5.7
+      env:
+        CC_TEST_REPORTER_ID: 13eeb4d2a2bda3b198158bcd91bfed140268639117e95af70711c12a908af990
+        JACOCO_SOURCE_PATH: "${{github.workspace}}/src/main/java"
+      with:
+        coverageCode: ./gradlew jacocoTestReport
+        coverageLocations: "${{github.workspace}}/build/reports/jacoco/test/jacocoTestReport.xml:jacoco"
