--- a/build.gradle
+++ b/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.2'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.6.2'
     testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30'
+    testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.3.3'
 }
