--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
     implementation rootProject
-    implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 }
