--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,3 +38,8 @@ jobs:
       with:
         coverageCommand: ./gradlew jacocoTestReport
         coverageLocations: "${{github.workspace}}/build/reports/jacoco/test/jacocoTestReport.xml:jacoco"
+
+    - name: Publish package
+        run: gradle publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
