--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,7 @@
-apply plugin: 'jacoco'
+plugins {
+    id 'jacoco'
+    id 'maven-publish'
+}
 
 allprojects {
     group 'org.ishugaliy'
@@ -24,12 +27,25 @@ jacocoTestReport {
     }
 }
 
+publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = "https://maven.pkg.github.com/ishugalii/allgood-consistent-hash"
+            credentials = {
+                username = System.getenv("GITHUB_ACTOR")
+                password = System.getenv("GITHUB_TOKEN")
+            }
+        }
+    }
+}
+
 dependencies {
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
     implementation group: 'net.openhft', name: 'zero-allocation-hashing', version: '0.11'
 
+    testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.3.3'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.2'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.6.2'
     testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30'
-    testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.3.3'
 }
