--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ publishing {
         maven {
             name = "GitHubPackages"
             url = "https://maven.pkg.github.com/ishugalii/allgood-consistent-hash"
-            credentials = {
+            credentials {
                 username = System.getenv("GITHUB_ACTOR")
                 password = System.getenv("GITHUB_TOKEN")
             }
