--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,24 +8,15 @@ on:
     types: [created]
 
 jobs:
-  build:
-
+  publish:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+      - uses: actions/setup-java@v1
         with:
           java-version: 1.8
-          server-id: github
-          settings-path: ${{ github.workspace }}
-
-      - name: Build with Gradle
-        run: ./gradlew build
-
-      - name: Publish to GitHub Packages
-        run: ./gradle publish
+      - name: Publish packages
+        run: ./gradlew publish
         env:
           GITHUB_ACTOR: ${{ github.actor }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
