--- a/build.gradle
+++ b/build.gradle
@@ -31,11 +31,16 @@ publishing {
     repositories {
         maven {
             name = "GitHubPackages"
-            url = "https://maven.pkg.github.com/ishugaliy"
+            url = "https://maven.pkg.github.com/ishugaliy/allgood-consistent-hash"
             credentials {
                 username = System.getenv("GITHUB_ACTOR")
                 password = System.getenv("GITHUB_TOKEN")
             }
+        }
+    }
+    publications {
+        gpr(MavenPublication) {
+            from(components.java)
         }
     }
 }
