--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,10 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: 1.8
+
+      - name: Build with Gradle
+        run: ./gradlew build
+
       - name: Publish packages
         run: ./gradlew publish
         env:
