--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,10 +16,7 @@ jobs:
         with:
           java-version: 1.8
 
-      - name: Build with Gradle
-        run: ./gradlew build
-
-      - name: Publish packages
+      - name: Publish artifacts
         run: ./gradlew publish
         env:
           GITHUB_ACTOR: ${{ github.actor }}
