--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ publishing {
     }
     publications {
         maven(MavenPublication) {
-            version = '1.0.0-SNAPSHOT'
+            version = '1.0.0'
             from(components.java)
         }
     }
